welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:4: error: not found: value n
	if (num+2==10*n || num-2==10*n)
                      ^